@@ -42,7 +42,6 @@
 "Create group":"",
 "Crossfade":"",
 "Current play queue":"",
-"Current track duration is too short. (Minimum of %1 seconds required.)":"",
 "Days":"",
 "Default":"",
 "Delete":"",
@@ -51,8 +50,6 @@
 "Don't know how to handle this!":"",
 "Don't shuffle":"",
 "Don't update information when song changes":"",
-"Duration of current track":"",
-"Duration of play queue":"",
 "ERROR: List processing failed":"",
 "Edit":"",
 "Edit Alarm":"",
@@ -123,7 +120,6 @@
 "Play album starting at track":"",
 "Play next":"",
 "Play now":"",
-"Play queue duration is too short. (Minimum of %1 seconds required.)":"",
 "Play selection":"",
 "Player Settings":"",
 "Players":"",
