@@ -248,9 +248,6 @@
 "Album Mix":"",
 "Audio":"",
 "Crossfade":"",
-"Current track duration is too short. (Minimum of %1 seconds required.)":"Dauer des aktuellen Titels ist zu kurz. (Es werden mindestens %1 Sekunden benötigt.)",
-"Duration of current track":"Dauer des aktuellen Titels",
-"Duration of play queue":"Dauer der Wiedergabeliste",
 "Firmware: %1":"",
 "IP: %1":"",
 "Information":"",
@@ -258,7 +255,6 @@
 "Mon":"",
 "Name":"",
 "OK":"",
-"Play queue duration is too short. (Minimum of %1 seconds required.)":"Dauer der Wiedergabeliste ist zu kurz. (Es werden mindestens %1 Sekunden benötigt.)",
 "Plugins":"",
 "Radio":"",
 "Sound":"",
