@@ -139,10 +139,7 @@
 "Create Group Player":"",
 "Create group":"",
 "Crossfade":"",
-"Current track duration is too short. (Minimum of %1 seconds required.)":"",
 "Don't update information when song changes":"",
-"Duration of current track":"",
-"Duration of play queue":"",
 "ERROR: List processing failed":"",
 "Edit":"",
 "Edit Group Player":"",
@@ -183,7 +180,6 @@
 "Place album covers, artist images (if supported), and others in a grid.":"",
 "Play album starting at track":"",
 "Play next":"",
-"Play queue duration is too short. (Minimum of %1 seconds required.)":"",
 "Play selection":"",
 "Players":"",
 "Plugins":"",
